--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,8 @@ gnome_video_arcade_SOURCES = \
 	gva-main.h			\
 	gva-play-back.c			\
 	gva-play-back.h			\
+	gva-time.c			\
+	gva-time.h			\
 	gva-ui.c			\
 	gva-ui.h			\
 	gva-util.c			\
