2007-05-19  Matthew Barnes  <mbarnes@redhat.com>
	* data/gnome-video-arcade.glade:
	Use custom icon instead of "gnome-joystick".

	* data/gnome-video-arcade.desktop.in:
	Use custom icon instead of "gnome-joystick".
	Change name to "Video Arcade" (drop the "GNOME").

	* data/Makefile.am:
	Install icon into $(datadir)/icons/hicolor/scalable/apps.

	* src/gva-game-store.c (game_store_constructor):
	* src/gva-game-store.h:
	Define columns for "year", "manufacturer", and "clone-of".

	* src/gva-ui.c (action_about_cb):
	Add translator credits.

	* po/LINGUAS: Add Swedish (sv).

	* po/POTFILES.in: Add missing files with translations.

	* po/sv.po: Swedish translation from Daniel Nylander.

--- a/configure.ac
+++ b/configure.ac
@@ -2,10 +2,10 @@
 
 AC_PREREQ([2.54])
 
-m4_define([gva_version], 0.1)
+m4_define([gva_version], 0.1.1)
 
 AC_INIT([GNOME Video Arcade], [gva_version],
-        [matthew@barnes.net], gnome-video-arcade)
+        [mbarnes@redhat.com], gnome-video-arcade)
 
 AC_CONFIG_SRCDIR(src/main.c)
 AC_CONFIG_HEADER(config.h)
