2007-05-28  Matthew Barnes  <mbarnes@redhat.com>
	* src/Makefile.am:
	Add gva-process.[ch].

	* src/gva-process.c:
	* src/gva-process.h:
	New source files provide a simple process abstraction.

	* src/gva-xmame.c:
	* src/gva-xmame.h:
	Reimplement the API using GvaProcess.
	Add gva_xmame_async_command() for asynchronous commands.
	Make functions that run/record/playback games asynchronous.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -25,6 +25,8 @@ gnome_video_arcade_SOURCES = \
 	gva-main.h			\
 	gva-play-back.c			\
 	gva-play-back.h			\
+	gva-process.c			\
+	gva-process.h			\
 	gva-time.c			\
 	gva-time.h			\
 	gva-tree-view.c			\
