2007-06-26  Matthew Barnes  <mbarnes@redhat.com>
	* configure.ac:
	Add version checks for GLib and GTK+. (Gianni Moschini)

	* src/Makefile.am:
	Add GLIB_CFLAGS, GLIB_GLIBS, GTK_CFLAGS, and GTK_LIBS.

--- a/configure.ac
+++ b/configure.ac
@@ -16,6 +16,16 @@ AM_MAINTAINER_MODE
 GVA_VERSION=gva_version
 AC_SUBST(GVA_VERSION)
 
+GLIB_MODULES="glib-2.0 >= 2.12"
+PKG_CHECK_MODULES(GLIB, $GLIB_MODULES)
+AC_SUBST(GLIB_CFLAGS)
+AC_SUBST(GLIB_LIBS)
+
+GTK_MODULES="gtk+-2.0 >= 2.10"
+PKG_CHECK_MODULES(GTK, $GTK_MODULES)
+AC_SUBST(GTK_CFLAGS)
+AC_SUBST(GTK_LIBS)
+
 GCONF_MODULES="gconf-2.0 >= 2.0.0"
 PKG_CHECK_MODULES(GCONF, $GCONF_MODULES)
 AC_SUBST(GCONF_CFLAGS)
