--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,8 @@ gnome_video_arcade_SOURCES = \
 	gva-main.h			\
 	gva-mame-process.c		\
 	gva-mame-process.h		\
+	gva-parser.c			\
+	gva-parser.h			\
 	gva-play-back.c			\
 	gva-play-back.h			\
 	gva-preferences.c		\
