2007-07-02  Matthew Barnes  <mbarnes@redhat.com>
	* configure.ac:
	Add --with-history-file and --with-mameinfo-file options.
	These options don't do anything but they will be used to parse
	the history.dat and mameinfo.dat files ourselves, since recent
	MAME releases no longer use them.

	* gva-parser.c:
	Refactor the logic a bit.

--- a/config.h.in
+++ b/config.h.in
@@ -51,6 +51,12 @@
 /* Define to 1 if you have the <wordexp.h> header file. */
 #undef HAVE_WORDEXP_H
 
+/* Location of the arcade history file */
+#undef HISTORY_FILE
+
+/* Location of the MAME information file */
+#undef MAMEINFO_FILE
+
 /* Name of package */
 #undef PACKAGE
 
