2007-07-06  Matthew Barnes  <mbarnes@redhat.com>
	** Phase one of adding an SQLite games database.

	* configure.ac:
	Add check for sqlite3 package.

	* src/Makefile.am:
	Add gva-db.[ch].
	Add flags for linking to libsqlite3.

	* src/gva-common.h:
	#include <sqlite3.h>

	* src/gva-db.[ch]:
	New source files provide an interface to the sqlite3 database.

	* src/gva-error.[ch]:
	Add GVA_SQLITE_ERROR.

	* src/gva-parser.c:
	Populate the sqlite3 database instead of the GtkTreeModel.
	This makes the Properties window less useful for now, but the
	next phase will populate the GtkTreeModel by way of a database
	query.  The resulting database is currently under 2 MB, but does
	not include BIOS, ROM, disk, chip, or dipswitch information yet.

	* src/gva-xmame.c (gva_xmame_get_total_supported):
	New function returns the total number of supported games.
	Useful for reporting progress while building the database.

--- a/configure.ac
+++ b/configure.ac
@@ -16,6 +16,7 @@ AM_MAINTAINER_MODE
 GVA_VERSION=gva_version
 AC_SUBST(GVA_VERSION)
 
+# Dependencies
 GLIB_MODULES="glib-2.0 >= 2.12"
 PKG_CHECK_MODULES(GLIB, $GLIB_MODULES)
 AC_SUBST(GLIB_CFLAGS)
@@ -36,6 +37,11 @@ PKG_CHECK_MODULES(GLADE, $GLADE_MODULES)
 AC_SUBST(GLADE_CFLAGS)
 AC_SUBST(GLADE_LIBS)
 
+SQLITE_MODULES="sqlite3 >= 3.0.0"
+PKG_CHECK_MODULES(SQLITE, $SQLITE_MODULES)
+AC_SUBST(SQLITE_CFLAGS)
+AC_SUBST(SQLITE_LIBS)
+
 # Header Checks
 AC_HEADER_STDC
 AC_CHECK_HEADERS(wordexp.h)
@@ -44,9 +50,8 @@ AC_CHECK_HEADERS(wordexp.h)
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_INTLTOOL
+AC_PROG_LIBTOOL
 AC_PATH_PROG(GCONFTOOL, gconftool-2)
-
-AM_GCONF_SOURCE_2
 
 # Localization
 AH_TEMPLATE(GETTEXT_PACKAGE, [Package name for gettext])
@@ -54,6 +59,9 @@ GETTEXT_PACKAGE=gnome-video-arcade
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
+
+# Miscellaneous
+AM_GCONF_SOURCE_2
 
 # Optional Features
 
