2007-07-18  Matthew Barnes  <mbarnes@redhat.com>
	** Make preparations for adding multiple MAME backends.

	* src/Makefile.am:
	Add gva-mame-common.[ch].
	Rename gva-xmame.h to gva-mame.h.
	Rename gva-xmame.c to gva-mame-xmame.c.

	* src/main.c:
	* src/gva-db.c:
	* src/gva-play-back.c:
	* src/gva-preferences.c:
	* src/gva-main.c:
	* src/gva-mame-xmame.c:
	* src/gva-ui.c:
	* src/gva-util.c:
	Change "xmame" prefixes to "mame".

	* src/gva-mame-common.[ch]:
	New source files implement functions common to all MAME backends.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,8 +31,12 @@ gnome_video_arcade_SOURCES = \
 	gva-history.h			\
 	gva-main.c			\
 	gva-main.h			\
+	gva-mame-common.c		\
+	gva-mame-common.h		\
 	gva-mame-process.c		\
 	gva-mame-process.h		\
+	gva-mame-xmame.c		\
+	gva-mame.h			\
 	gva-play-back.c			\
 	gva-play-back.h			\
 	gva-preferences.c		\
@@ -49,8 +53,6 @@ gnome_video_arcade_SOURCES = \
 	gva-ui.h			\
 	gva-util.c			\
 	gva-util.h			\
-	gva-xmame.c			\
-	gva-xmame.h			\
 	main.c
 
 gnome_video_arcade_LDADD = \
