2007-07-23  Matthew Barnes  <mbarnes@redhat.com>
	* data/gnome-video-arcade.glade:
	* src/gva-preferences.c:
	Use a GvaColumnManager widget for selecting columns.
	Unfortunately this widget can't be directly loaded with glade.

	* data/gnome-video-arcade.schemas:
	Add "all-columns" key.

	* src/Makefile.am:
	Add gva-column-manager.[ch].

	* src/gva-common.h:
	Add GVA_GCONF_ALL_COLUMNS_KEY.

	* src/gva-column-manager.[ch]:
	New source files implement a GtkTreeViewColumn chooser widget.
	Allows columns to be rearranged and their visiblity toggled.

	* src/gva-columns.c:
	Add columns for "manufacturer", "name", and "year".

	* src/gva-columns.c (gva_columns_load), (gva_columns_save):
	Rewrite the logic to utilize the new GConf key.

	* src/gva-columns.c (gva_columns_get_names):
	New function extracts column names from a GtkTreeView.

	* src/gva-ui.h:
	Remove widgets we no longer need direct access to.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,6 +16,8 @@ AM_CPPFLAGS = \
 gnome_video_arcade_SOURCES = \
 	gva-cell-renderer-pixbuf.c	\
 	gva-cell-renderer-pixbuf.h	\
+	gva-column-manager.c		\
+	gva-column-manager.h		\
 	gva-columns.c			\
 	gva-columns.h			\
 	gva-common.h			\
