2007-07-26  Matthew Barnes  <mbarnes@redhat.com>
	* configure.ac:
	* Makefile.am:
	* docs/*:
	Skeletal developer documentation generated by GTK-Doc.

	* src/main.c:
	Move command-line option variables to gva-util.c.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ### Process this file with automake to produce Makefile.in
 
-SUBDIRS = data po src
+SUBDIRS = data po src docs
 
 EXTRA_DIST = \
 	config.rpath			\
