2007-08-07  Matthew Barnes  <mbarnes@redhat.com>
	* configure.ac:
	Don't need to check for pkg-config.

	* maint/Makefile.am:
	Install a widget icon for Glade.
	Use $(PKG_CONFIG) instead of $(PKGCONFIG).

	* maint/widget-gva-column-manager.png:
	GvaColumnManager widget icon for Glade.

--- a/maint/Makefile.am
+++ b/maint/Makefile.am
@@ -1,7 +1,13 @@
 ### Process this file with automake to produce Makefile.in
 
+gladecatalog_DATA = gva.xml
+gladecatalogdir = `$(PKG_CONFIG) --variable=catalogdir gladeui-1.0`
+
+gladepixmap_DATA = widget-gva-column-manager.png
+gladepixmapdir = `$(PKG_CONFIG) --variable=pixmapdir gladeui-1.0`/hicolor/22x22/actions
+
 gladegva_LTLIBRARIES = libgladegva.la
-gladegvadir = `$(PKGCONFIG) --variable=moduledir gladeui-1.0`
+gladegvadir = `$(PKG_CONFIG) --variable=moduledir gladeui-1.0`
 
 libgladegva_la_CFLAGS = \
 	@GLIB_CFLAGS@ @GTK_CFLAGS@ \
@@ -17,8 +23,6 @@ libgladegva_la_LIBADD = \
 	@GLIB_LIBS@ @GTK_LIBS@ \
 	@GCONF_LIBS@
 
-gladecatalogdir = `$(PKGCONFIG) --variable=catalogdir gladeui-1.0`
-gladecatalog_DATA = gva.xml
-
 EXTRA_DIST = \
-	$(gladecatalog_DATA)
+	$(gladecatalog_DATA) \
+	$(gladepixmap_DATA)
