2007-08-22  Matthew Barnes  <mbarnes@redhat.com>
	* Embed gconf-bridge into GNOME Video Arcade rather than
	  requiring it as an external dependency.  Some GNU/Linux
	  distros (e.g. Fedora) do not provide libgconf-bridge.

	* configure.ac:
	Revert previous changes.

	* data/gnome-video-arcade.glade:
	Hide the main window until we've initialized it.

	* data/gnome-video-arcade.schemas:
	Fix some typos.

	* docs/reference/Makefile.am:
	Revert previous changes and ignore gconf-bridge.h.

	* src/Makefile.am:
	Revert previous changes and add gconf-bridge.[ch] to SOURCES.

	* src/gconf-bridge.[ch]:
	New source files ripped from libgconf-bridge.

	* src/gva-main.c (gva_main_init):
	Show the window after initialization is complete.

--- a/docs/reference/Makefile.am
+++ b/docs/reference/Makefile.am
@@ -47,7 +47,7 @@ CFILE_GLOB=$(top_srcdir)/src/*.c
 
 # Header files to ignore when scanning.
 # e.g. IGNORE_HFILES=gtkdebug.h gtkintl.h
-IGNORE_HFILES=gva-common.h
+IGNORE_HFILES=gconf-bridge.h gva-common.h
 
 # Images to copy into HTML directory.
 # e.g. HTML_IMAGES=$(top_srcdir)/gtk/stock-icons/stock_about_24.png
@@ -76,7 +76,6 @@ INCLUDES=							\
 	$(GLIB_CFLAGS)						\
 	$(GTK_CFLAGS)						\
 	$(GCONF_CFLAGS)						\
-	$(GCONF_BRIDGE_CFLAGS)					\
 	$(GLADE_CFLAGS)						\
 	$(SQLITE_CFLAGS)
 GTKDOC_LIBS=							\
@@ -103,7 +102,6 @@ GTKDOC_LIBS=							\
 	$(GLIB_LIBS)						\
 	$(GTK_LIBS)						\
 	$(GCONF_LIBS)						\
-	$(GCONF_BRIDGE_LIBS)					\
 	$(GLADE_LIBS)						\
 	$(SQLITE_LIBS)
 
