2007-09-01  Matthew Barnes  <mbarnes@redhat.com>
	* NEWS: Update for 0.4.3

	* src/main.c:
	* src/gva-common.h:
	Add --version command-line option.
	Prints the program version and exits.

	* po/POTFILES.in: Add src/gconf-bridge.c.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 # List of source files which contain translatable strings.
 
 data/gnome-video-arcade.glade
+src/gconf-bridge.c
 src/gva-column-manager.c
 src/gva-columns.c
 src/gva-history.c
