2007-09-21  Matthew Barnes  <mbarnes@redhat.com>
	* src/Makefile.am:
	Replace -Werror with -Wall (SF bug #1799564).

	* src/main.c:
	* src/gva-columns.c:
	* src/gva-db.c:
	* src/gva-game-store.c:
	* src/gva-main.c:
	* src/gva-mame-common.c:
	* src/gva-properties.c:
	* src/gva-tree-view.c:
	* src/gva-ui.c:
	* src/gva-util.c:
	Fix a bunch of compiler warnings caught by -Wall.  Most of them
	were just unused variables or missing #includes.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@
 bin_PROGRAMS = gnome-video-arcade
 
 AM_CFLAGS = \
-	-Werror \
+	-Wall \
 	@GLIB_CFLAGS@ @GTK_CFLAGS@ \
 	@GCONF_CFLAGS@ @GLADE_CFLAGS@ \
 	@SQLITE_CFLAGS@
