2007-10-08  Matthew Barnes  <mbarnes@redhat.com>
	Revert the previous changes.  I ran into too many complications
	trying to get cursor movement from the Properties window to work
	right.  Maybe try again at some later date.

	* docs/Makefile.am:
	* docs/gnome-video-arcade.1:
	Add a manual page.

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -1,3 +1,7 @@
 ### Process this file with automake to produce Makefile.in
 
 SUBDIRS = reference
+
+man_MANS = gnome-video-arcade.1
+
+EXTRA_DIST = $(man_MANS)
