2007-10-14  Matthew Barnes  <mbarnes@redhat.com>
	* help/C/figures/gva_building_database.png
	* help/C/figures/gva_main_window.png
	* help/C/gnome-video-arcade.xml
	* help/Makefile.am:
	Finish the "Getting Started" section of the user documentation.

--- a/help/Makefile.am
+++ b/help/Makefile.am
@@ -6,5 +6,9 @@ dist-hook: doc-dist-hook
 DOC_MODULE = gnome-video-arcade
 DOC_ENTITIES = legal.xml
 DOC_INCLUDES =
-DOC_FIGURES =
+
+DOC_FIGURES = \
+	figures/gva_building_database.png	\
+	figures/gva_main_window.png
+
 DOC_LINGUAS =
