--- a/configure.ac
+++ b/configure.ac
@@ -78,21 +78,30 @@ AC_PATH_PROG(BASENAME, basename)
 AC_PATH_PROG(GCONFTOOL, gconftool-2)
 
 # MAME Program
-AC_ARG_VAR([MAME], [MAME command])
-AC_PATH_PROGS([MAME], [sdlmame xmame],, [$PATH:/usr/local/games:/usr/games])
-case `$BASENAME $MAME` in
-        sdlmame*) MAME_BACKEND='gva-mame-sdlmame.$(OBJEXT)' ;;
-        xmame*)   MAME_BACKEND='gva-mame-xmame.$(OBJEXT)' ;;
-        *)        AC_MSG_ERROR([
+AC_ARG_VAR([SDLMAME], [SDLMAME command])
+AC_PATH_PROG([SDLMAME], [sdlmame],, [$PATH:/usr/local/games:/usr/games])
+if test "x$SDLMAME" != "x"; then
+        MAME=$SDLMAME
+        MAME_BACKEND='gva-mame-sdlmame.$(OBJEXT)'
+else
+        AC_ARG_VAR([XMAME], [XMAME command])
+        AC_PATH_PROG([XMAME], [xmame],, [$PATH:/usr/local/games:/usr/games])
+        if test "x$XMAME" != "x"; then
+                MAME=$XMAME
+                MAME_BACKEND='gva-mame-xmame.$(OBJEXT)'
+        fi
+fi
+if test "x$MAME" = "x"; then
+        AC_MSG_ERROR([
 
         Unable to find a MAME program.
 
-        Please install either sdlmame or xmame, or specify
-        the MAME command with a MAME environment variable.
+        Please install either sdlmame or xmame, or specify the
+        MAME command with a SDLMAME or XMAME environment variable.
 
-        e.g. MAME=/path/to/program/xmame.x11 ./configure
-]) ;;
-esac
+        e.g. XMAME=/path/to/program/xmame.x11 ./configure
+])
+fi
 AC_SUBST([MAME_BACKEND])
 AC_DEFINE_UNQUOTED(MAME_PROGRAM, "$MAME", [Location of the MAME program])
 
